# Cross-and-circle-game-neural-networks-learn

./: .gitmodules  AI-NN  AI-NN2  AI-NN3  CMakeCache.txt  CMakeLists.txt  Cross_and_circle_game_neural_networks_learn  Makefile  README.md  cmake_install.cmake  lel2  main.cpp
